--- a/doc/magic.man
+++ b/doc/magic.man
@@ -44,7 +44,10 @@ The string type specification can be optionally followed
 by /[Bbc]*.
 The ``B'' flag compacts whitespace in the target, which must
 contain at least one whitespace character.
-If the magic has "n" consecutive blanks, the target needs at least "n"
+If the magic has
+.I n
+consecutive blanks, the target needs at least
+.I n
 consecutive blanks to match.
 The ``b'' flag treats every blank in the target as an optional blank.
 Finally the ``c'' flag, specifies case insensitive matching: lowercase
@@ -177,7 +180,7 @@ the file.
 The value at that offset is read, and is used again as an offset
 in the file.
 Indirect offsets are of the form:
-.BI (( x [.[bslBSL]][+-][ y ]).
+.BI (( x [.[bslBSL]][+\-][ y ]).
 The value of 
 .I x
 is used as an offset in the file. A byte, short or long is read at that offset
@@ -237,4 +240,4 @@ indirect offsets.
 .\" the changes I posted to the S5R2 version.
 .\"
 .\" Modified for Ian Darwin's version of the file command.
-.\" @(#)$Id: magic.man,v 1.25 2003/03/31 17:52:04 christos Exp $
+.\" @(#)$Id: magic.man,v 1.26 2003/05/23 21:31:57 christos Exp $
